# PnkCore

./: README.md
ansible-playbooks/kubernetes/k8s-multi-node/: README.md  playbook.yaml
ansible-playbooks/kubernetes/k8s-single-node/: README.md  playbook.yaml
ceph/observability/collecting-smart-disk-metrics-from-ceph-with-opentelemetry/: README.md  smartctl-exporter.service
cncf-certifications/cca/test-environment-setup/: README.md  helm-values.yaml
cncf-certifications/cks/: README.md
cncf-certifications/cks/cluster-setup/: README.md  install-main.sh  install-worker.sh
cncf-certifications/otca/test-environment-setup/: README.md
cncf-certifications/pca/: README.md
cncf-certifications/pca/setting-up-prometheus-locally/: README.md  docker-compose.yaml  prometheus.yml
courses-playbooks/data-engineering-pipelines/kafka/apache-kafka-for-beginners/section-04/lesson-02/: README.md  producer.py  pyproject.toml  settings.py
courses-playbooks/data-engineering-pipelines/kafka/apache-kafka-for-beginners/section-04/lesson-02/data/: bulk-events.json  single-event.json
courses-playbooks/data-engineering-pipelines/kafka/apache-kafka-for-beginners/section-04/lesson-02/samples/: bulk-producer.py  single-producer.py
gitops/deploy-helm-charts-with-argocd-and-flux/: README.md
gitops/deploy-helm-charts-with-argocd-and-flux/flux-base-infrastructure/: argocd.yml
gitops/deploy-helm-charts-with-argocd-and-flux/flux-helm-chart-operator/: chart.yml
kubernetes/infrastructure/setup-your-own-local-test-environment/: README.md
(+221 files in other folders)
